# Easyhome

./: .editorconfig  .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt
app/: log.py  main.py  security.py  server.py
app/api/: __init__.py  dependencies.py
app/api/routers/: amenities.py  auth.py  category.py  district.py  facebook_auth.py  favorite.py  google_auth.py  nearby_place.py  object.py  property.py  property_images.py  province.py  review.py  user.py  ward.py
app/core/: config.py
app/database/: database.py  init_db.py
app/database/seed/: __init__.py  seed_amenities.py  seed_categories.py  seed_district.py  seed_nearby_places.py  seed_objects.py  seed_province.py  seed_user.py  seed_ward.py
app/model/: __init__.py  amenities.py  category.py  district.py  favorite.py  link_model.py  near_by_place.py  object.py  property.py  property_image.py  province.py  review.py  user.py  ward.py
app/schemas/: favorite.py  property.py  review.py  user.py
app/service/: __init__.py  amenities.py  base.py  category.py  district.py  favorite.py  nearby_place.py  object.py  property.py  property_images.py  province.py  review.py  user.py  ward.py
migrations/: env.py
migrations/versions/: 39e005f0c6b1_table_user_add_field_super_user.py  6ef2f56f7bc6_init_tables.py  712ab2ddb0c6_init.py  a88963f7dce4_table_user_add_field_super_user.py  e6e52c3212f0_init_tables.py
