[project]
name = "easyhome"
version = "0.1.0"
description = ""
authors = [
    {name = "Hoang",email = "23E1020002@hueuni.edu.vn"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic (==1.17.2)",
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.12.0)",
    "bcrypt (==4.0.1)",
    "certifi (==2025.11.12)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.4)",
    "click (==8.3.1)",
    "colorama (==0.4.6)",
    "cryptography (==46.0.3)",
    "dnspython (==2.8.0)",
    "ecdsa (==0.19.1)",
    "email-validator (==2.3.0)",
    "fastapi (==0.122.1)",
    "greenlet (==3.2.4)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.11)",
    "mako (==1.3.10)",
    "markupsafe (==3.0.3)",
    "passlib (==1.7.4)",
    "psycopg2 (==2.9.11)",
    "psycopg2-binary (==2.9.11)",
    "pyasn1 (==0.6.1)",
    "pycparser (==2.23)",
    "pydantic (==2.12.5)",
    "pydantic-settings (==2.12.0)",
    "pydantic-core (==2.41.5)",
    "pyjwt (==2.10.1)",
    "python-dotenv (==1.2.1)",
    "python-jose (==3.5.0)",
    "python-multipart (==0.0.20)",
    "requests (==2.32.5)",
    "rsa (==4.9.1)",
    "six (==1.17.0)",
    "sqlalchemy (==2.0.44)",
    "sqlmodel (==0.0.27)",
    "starlette (==0.50.0)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "urllib3 (==2.5.0)",
    "uvicorn (==0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
